tests/__snapshots__/directive-ts-expect-error-single-line-truncated-stderr.snap.txt
Error: The diagnostic message did not match.

   7 | // @ts-expect-error Type '...' is not assignable to type 'Promise<string>'
   8 | a = true;
   9 | // @ts-expect-error Type 'boolean' is not assignable to type 'Array<...>'
     |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  10 | a = true;
  11 | // @ts-expect-error Type 'Promise<...>' is not assignable to type type 'Promise<string>'
  12 | a = true;

       at ./__typetests__/sample.tst.ts:9:21

    The suppressed error:

    Type 'boolean' is not assignable to type 'Promise<string>'. ts(2322)

       8 | a = true;
       9 | // @ts-expect-error Type 'boolean' is not assignable to type 'Array<...>'
      10 | a = true;
         | ~
      11 | // @ts-expect-error Type 'Promise<...>' is not assignable to type type 'Promise<string>'
      12 | a = true;
      13 | 

           at ./__typetests__/sample.tst.ts:10:1

Error: The diagnostic message did not match.

   9 | // @ts-expect-error Type 'boolean' is not assignable to type 'Array<...>'
  10 | a = true;
  11 | // @ts-expect-error Type 'Promise<...>' is not assignable to type type 'Promise<string>'
     |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  12 | a = true;
  13 | 

       at ./__typetests__/sample.tst.ts:11:21

    The suppressed error:

    Type 'boolean' is not assignable to type 'Promise<string>'. ts(2322)

      10 | a = true;
      11 | // @ts-expect-error Type 'Promise<...>' is not assignable to type type 'Promise<string>'
      12 | a = true;
         | ~
      13 | 

           at ./__typetests__/sample.tst.ts:12:1

